# robobot

./: .gitignore  README.md  navigate_to_pose_log  orange_mask.jpg_test  pyproject.toml  requirements.txt  vertical_mean_mask.txt
config/camera/: calibration_matrix.npy
mqtt_python/: _variables.py  ccc.txt  log_out.txt  map.py  mqtt-client.py  scam.py  sedge.py  ulog.py  uservice.py
mqtt_python/modules/: aruco.py  axe.py  ball_detection.py  blue_ball_task.py  deliver_golf_ball.py  eight.py  fast_1_2.py  golf_ball_plateau.py  luggage.py  navigate_to_drop_off.py  navigate_to_pose.py  roundabout.py  roundabout_s.py  seesaw.py  task.py  topple_basket.py
notebook/: aruco.ipynb  ball_comparison.ipynb  blob_detection.ipynb  cameracalibration.ipynb  distortion_coefficients.npy  linedetect.ipynb
stream_server/: read_stream.py  stream_server.err
